# Yahtzee

./: .gitignore  pyproject.toml
src/: dice_analysis.py  game_logic.py  models.py  scoring.py  yahtzee_game.py
src/ai/: genetic_agent.py  hybrid_agent.py  rl_agent.py
tests/: test_classes_methods.py  test_dice_analysis.py  test_integration.py  test_scoring.py
ui/: game_ui.py  training_observer.py
